# freederation_icp

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/declarations/freederation_nostr_backend/: freederation_nostr_backend.did  freederation_nostr_backend.did.d.ts  freederation_nostr_backend.did.js  index.d.ts  index.js
src/declarations/freederation_nostr_frontend/: index.d.ts  index.js
src/freederation_nostr_backend/: Cargo.toml
src/freederation_nostr_backend/src/: lib.rs
src/freederation_nostr_backend/src/encryption/: mod.rs
src/freederation_nostr_backend/src/nostr/: event_data.rs  event_error.rs  event_id.rs  event_kind.rs  metadata.rs  mod.rs  nostrevent.rs
src/freederation_nostr_backend/src/nostr/tag/: coordinate.rs  delegation.rs  marker.rs  mod.rs  nostrhttpmethod.rs  nostrprofile.rs  nostruri.rs  relayinfo.rs  relaymetadata.rs  report.rs  sharedevent.rs  single_letter_tag.rs  tagdata.rs  tagerror.rs  tagkind.rs  tagstandard.rs
src/freederation_nostr_backend/src/rng/: mod.rs
src/freederation_nostr_backend/src/signing/: assymetric_secp256k1.rs  mod.rs
src/freederation_nostr_backend/src/util/: basecore.rs  jsonutil.rs  mod.rs  nostrbech32.rs  nostrbech32_params.rs  nostrimage.rs  nostrpow.rs  uncheckedurl.rs
src/freederation_nostr_backend/src/util/time/: mod.rs  timesupplier.rs
src/freederation_nostr_frontend/: package.json
src/freederation_nostr_frontend/src/: App.js
